test/compile_errors/lib/extension_coherence/slug.w
use extension_coherence.base

extend Target:
    pub fn tag(self: &Self) -> str:
        "slug"
